ProjectExplorer: Fix build failure on windows

Task-number: QTCREATORBUG-19368
Change-Id: I4464b4f9b2f1a2d725f5a08fb6e38444fabcdea5
Reviewed-by: Eike Ziller <eike.ziller@qt.io>